--- a/smart-cart/src/App.css
+++ b/smart-cart/src/App.css
@@ -1,4 +1,5 @@
 .App {
+  font-family: 'The Girl Next Door', cursive;
   height: 100vh;
   text-align: center;
   display: grid;
@@ -54,6 +55,19 @@
 
 .header {
   grid-area: header;
+  background-color: #2e8bce;
+  margin: 0;
+  min-height: 10vh;
+  text-align: center;
+  display: grid;
+  align-items: center;
+  justify-items: center;
+  text-decoration: underline;
+  font-size: 4em;
+}
+
+nav {
+  background-color: #2e8bce;
 }
 
 /* .navigation {
@@ -73,10 +87,10 @@ footer {
 
 
 .navigation a:visited {
-  color: black;
+  color: rgb(0, 0, 0);
 }
 
 
 .navigation a:hover {
-  color: grey;
+  color: rgb(209, 209, 209);
 }
