--- a/smart-cart/src/App.css
+++ b/smart-cart/src/App.css
@@ -136,3 +136,63 @@ footer {
 .errorMessage {
   color: red;
 }
+
+.modal-background{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width:100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.75);
+}
+
+.modal-content {
+  position:fixed;
+  background: white;
+  width: auto;
+  height: auto;
+  top:50%;
+  left:50%;
+  transform: translate(-50%,-50%);
+  /* margin: 0 20px; */
+}
+
+.modal-header {
+  background-color: lightgray;
+  height: auto;
+  display: grid;
+  grid-template-areas: '. title x';
+}
+
+.modal-title {
+  margin: 0;
+  height: auto;
+  align-self: center;
+  grid-area: title;
+}
+
+.modal-close-x {
+  align-self: start;
+  justify-self: end;
+  grid-area: x;
+  margin-right: 5px;
+}
+
+.modal-main {
+  width: 80%;
+  height: 15vh;
+  margin: auto;
+  display: grid;
+}
+
+.modal-footer {
+  background-color: lightgray;
+}
+
+.modal-close-x:hover {
+  cursor: pointer;
+}
+
+.edit-list-item input{
+  width: 30%;
+}
